<?xml version="1.0" encoding="utf-8"?>
<resources xmlns:android="http://schemas.android.com/apk/res/android">

    <string name="app_name">YouHelp v. 2</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="app_id">531384416976939</string>
    <string name="wams_app_key">NDigJpIKaKpIyqpREVdgBnrxgmaZAb17</string>
    <string name="wams_url">https://fastride.azure-mobile.net/</string>
    <string name="cancelled">Cancelled</string>
    <string name="permission_not_granted">Unable to perform selected action because permissions were not granted.</string>
    <string name="ok">OK</string>
    <string name="send_toast_service_url">http://youhelp.cloudapp.net/YouHelpService.svc/sendtoast</string>
    <string name="passenger_request_uri">http://fastride.cloudapp.net/FastRideService.svc/ride</string>
    <string name="send_chatmessage_url">http://youhelp.cloudapp.net/YouHelpService.svc/sendchatmessage</string>
    <string name="title_activity_register">RegisterActivity</string>
    <string name="you_are_here">You are here</string>
    <string name="say_something">Tap to notify</string>
    <string name="image_help_desc">Help</string>
    <string name="image_settings_desc">Settings</string>
    <string name="image_sos_desc">SOS</string>
    <string name="image_trip_desc">Trip</string>
    <string name="image_view_map">Share Ride</string>
    <string name="image_compass_desc">Compass</string>
    <string name="image_map_desc">Map</string>
    <string name="image_flattire_desc">Flat tire</string>
    <string name="image_jampercable_desc">Jamper Cable</string>
    <string name="image_helpother_desc">Other Help</string>
    <string name="image_send_desc">Send</string>
    <string name="image_user_desc">User Name</string>
    <string name="image_user_hazard_pic">Picture</string>
    <string name="image_user_record_voice">Record Message</string>
    <string name="title_activity_ride">RideActivity</string>
    <string name="title_activity_settings">Settings for YouHelp</string>
    <string name="title_activity_map">MapActivity</string>
    <string name="desc_ProfilePicture">desc_ProfilePicture</string>
    <string name="YourPhoneNumber">Your Phone Number:</string>
    <string name="YourSocialID">Your Social ID:</string>
    <string name="YourVehicleNumber">License Plate:</string>
    <string name="PrimarySOSNumber">Primary SOS Phone Number</string>
    <string name="SecondarySOSNumber">Secondary number</string>
    <string name="AllowSendPhone">Allow on send:</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_hazard">HazardActivity</string>
    <string name="your_message">Your Message:</string>
    <string name="maps_app">Maps App:</string>
    <string name="sendmessage_button_caption">Send</string>
    <string name="dummyUserName">User Name</string>
    <string name="dummyUserTitle">has an intention</string>
    <string name="dummyUserPhone">0543307026"</string>
    <string name="buttonDeleteAll">Delete All</string>
    <string name="buttonCallMe">Call Me</string>
    <string name="description">Description</string>

    <string-array name="mapsapps_array">
        <item>Waze</item>
        <item>Google Maps</item>
        <item>Internal</item>
    </string-array>

    <string name="title_activity_chat">ChatActivity</string>
    <string name="photo_send_desc">photo send description</string>
    <string name="message_hint">Enter a message</string>
    <string name="title_activity_nfc">NfcActivity</string>
    <string name="nfc_explanation">Tap your phone to another device.</string>
    <string name="lpn_explanation">Type in the Licence Plate Number of the vehicle you are going to share.</string>
    <string name="lpnSend">Send</string>
    <string name="lpnHint">xx-xxx-xx</string>
    <string name="lpnTapToSendDescription">TapToSendDescription</string>
    <string name="emptyLPN">Please type in License Plate Number</string>
    <string name="title_activity_basic">BasicActivity</string>
    <string name="ride_request">Ride request</string>
    <string name="ride_request_accepted">Your request was accepted</string>

</resources>
