<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    android:orientation="vertical">
 
    <View android:layout_width="fill_parent" android:layout_height="2dp"
		android:fadingEdge="horizontal"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" 
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/imageProfilePicture"
            android:layout_width="78dp"
            android:layout_height="78dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_gravity="left"
            android:contentDescription="@string/image_user_desc"
            android:src="@drawable/none" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"

            android:layout_toRightOf="@+id/imageProfilePicture"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/txtUserName"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:text="@string/dummyUserName"
                android:textColor="@color/white"
                android:textSize="22sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/txtTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dummyUserTitle"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/white" />

            <TextView
                android:id="@+id/txtUserPhoneNumber"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dummyUserPhone"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/white" />
        </LinearLayout>

        <ImageView
            android:id="@+id/imageViewHazardPic"
            android:layout_width="78dp"
            android:layout_height="78dp"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:contentDescription="@string/image_user_hazard_pic"
            android:src="@drawable/none" />

    </RelativeLayout>
    
    <ListView
        android:id="@+id/lvChatRoom"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="top"
        android:layout_weight="25"
		android:background="#010101"
        android:dividerHeight="0.1dp"
        android:fadingEdge="none"
        android:fastScrollEnabled="true"
        android:focusable="true"
        android:padding="4dip"
        android:smoothScrollbar="false"
        android:stackFromBottom="true"
        android:transcriptMode="normal" >
        
    </ListView>
    
    <LinearLayout
        android:layout_width="fill_parent"
		android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:layout_weight="1"
        android:baselineAligned="false"
       	android:orientation="horizontal"  
		android:padding="8dip">  
	    
	    <EditText
 	        android:id="@+id/txtMessage"
	        android:layout_width="0dip"
        	android:layout_height="fill_parent"
        	android:layout_weight="1"
        	android:textColor="@color/white" 
        	android:maxLines="5"
        	android:inputType="text|textAutoCorrect"
        	android:imeOptions="normal" 
        	android:cursorVisible="true">
	    </EditText>
	    
	    <Button
	        android:id="@+id/btnSendChatMessage"
	        android:layout_width="wrap_content" android:layout_height="wrap_content"
	        android:gravity="center_vertical|center_horizontal"
	        android:onClick="onSendChatMessage"
	        android:text="@string/sendmessage_button_caption" />
    
    </LinearLayout>
    
    <LinearLayout
			android:layout_width="fill_parent"
			android:background="#010101"
			android:layout_height="wrap_content"
			style="?android:attr/buttonBarStyle"
			android:layout_weight="1">

        <Button
            android:id="@+id/buttonClose"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onDelteChat"
            android:text="@string/buttonDeleteAll"
            android:textColor="#FFFFFF" />
        
        <Button
            android:id="@+id/buttonCallMe"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onCallMeChat"
            android:text="@string/buttonCallMe" 
            android:textColor="#FFFFFF" />

        <ImageButton
            android:id="@+id/btnRecordMessage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/image_user_record_voice"
            android:src="@android:drawable/btn_star" />
        
    </LinearLayout>
    
</LinearLayout>