<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
	android:background="@color/black"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.anonym.youhelp.HazardActivity" >

   <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@color/white" 
        android:text="@string/your_message" />

   <LinearLayout
       android:layout_width="match_parent"
       android:layout_height="match_parent" >

       <LinearLayout
           android:layout_width="wrap_content"
           android:layout_height="match_parent"
           android:layout_weight="0.83"
           android:orientation="vertical" >

           <EditText
               android:id="@+id/txtMessage"
               android:layout_width="200dp"
               android:layout_height="match_parent"
               android:layout_weight="1"
               android:ems="10"
               android:inputType="textMultiLine" />

           <ImageView
               android:id="@+id/imageViewHazardPicture"
               android:layout_width="wrap_content"
               android:layout_height="match_parent"
               android:layout_weight="1"
               android:src="@drawable/bubble_green" />
       </LinearLayout>

       <LinearLayout
           android:layout_width="wrap_content"
           android:layout_height="match_parent"
           android:orientation="vertical" >

           <ImageView
               android:id="@+id/btnSend"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:contentDescription="@string/image_send_desc"
               android:src="@drawable/sos" />

           <ImageView
               android:id="@+id/btnPhoto"
               android:layout_width="wrap_content"
               android:layout_height="0dp"
               android:layout_gravity="bottom"
               android:layout_weight="1"
               android:contentDescription="@string/photo_send_desc"
               android:src="@drawable/sos" />
       </LinearLayout>
   </LinearLayout>
    
</LinearLayout>
